ch10/ex01/django-service.yml
apiVersion: v1 # 서비스의 경우
kind: Service
metadata: # 다른 오브젝트와 구분하는 식별자
  name: django-service
spec: # 앞으로 생성할 서비스의 상태를 지정
  selector: # 연결할 파드 이름을 지정
    app.kubernetes.io/name: web-deploy 
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
